# SolarDawn

./: .gitignore  Cargo.toml  README.md
.github/: build.yml  copilot-instructions.md  dependabot.yml
.github/workflows/: build.yml
asset-src/: favicon.xcf
assets/: index.html
notes/: Design.md  game_design.md  setting.md
notes/Intercept Calculations/: Intercept Calculations.aux  Intercept Calculations.tex
solar_dawn_client/: Cargo.toml  Dioxus.toml
solar_dawn_client/assets/: guide.html  main.css  site.webmanifest
solar_dawn_client/src/: event_listener.rs  lib.rs  main.rs  websocket.rs
solar_dawn_client/src/scenes/: mod.rs
solar_dawn_client/src/scenes/game/: auto_orders.rs  map.rs  mod.rs  sidebar.rs
solar_dawn_common/: Cargo.toml
solar_dawn_common/src/: celestial.rs  lib.rs  order.rs  stack.rs
solar_dawn_server/: Cargo.toml  public
solar_dawn_server/src/: main.rs  model.rs
src/: game.rs  main.rs  semaphore.rs  vec2.rs
src/game/: order.rs  state.rs
src/game/state/: celestial.rs  stack.rs
