[package]
name = "solar_dawn_server"
version = "0.1.0"
authors = ["Justin Hu <justin.hu@alumni.ubc.ca>"]
edition = "2021"
description = "A simultaneous turn resolution 4X inspired by Triplanetary."
homepage = "https://github.com/JustinHuPrime/SolarDawn#readme"
repository = "https://github.com/JustinHuPrime/SolarDawn"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tungstenite = { version = "0.21.0", features = ["native-tls"] }
regex = "1.10.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
native-tls = "0.2.11"
