[workspace]
members = ["solar_dawn_client", "solar_dawn_common", "solar_dawn_server"]
resolver = "2"

[workspace.dependencies]
rand = "0.9.2"
serde = "1.0.228"
serde_cbor = "0.11.2"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
