[workspace]
members = [
    "solar_dawn_client",
    "solar_dawn_common",
    "solar_dawn_server", "solar_dawn_client",
]
resolver = "2"

[workspace.dependencies]
rand = "0.9.2"
serde = "1.0.228"
serde_cbor = "0.11.2"

[profile.android-dev]
inherits = "dev"

[profile.server-dev]
inherits = "dev"

[profile.wasm-dev]
opt-level = 1
inherits = "dev"
