[package]
name = "solar_dawn_client"
version = "0.5.0"
authors = ["Justin Hu <justin.hu@alumni.ubc.ca>"]
edition = "2024"
description = "A simultaneous turn resolution 4X inspired by High Frontier and Triplanetary - client package."
homepage = "https://github.com/JustinHuPrime/SolarDawn#readme"
repository = "https://github.com/JustinHuPrime/SolarDawn"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
dioxus = { version = "0.7.1", features = ["web"] }
futures = "0.3.31"
serde = { workspace = true }
serde_cbor = { workspace = true }
solar_dawn_common = { path = "../solar_dawn_common", features = ["client"] }
thiserror = "2.0.17"
wasm-bindgen = "0.2.105"
web-sys = { version = "0.3.82", features = [
    "Window",
    "Storage",
    "BinaryType",
    "WebSocket",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
] }
