[package]
name = "solar_dawn_common"
version = "0.5.0"
authors = ["Justin Hu <justin.hu@alumni.ubc.ca>"]
edition = "2024"
description = "A simultaneous turn resolution 4X inspired by High Frontier and Triplanetary - common data library."
homepage = "https://github.com/JustinHuPrime/SolarDawn#readme"
repository = "https://github.com/JustinHuPrime/SolarDawn"
license = "AGPL-3.0-or-later"

[dependencies]
rand = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
uuid = { version = "1.18", features = ["serde", "v4"], optional = true }

[features]
server = ["rand", "uuid"]
client = []
