[package]
name = "solar_dawn_server"
version = "0.5.0"
authors = ["Justin Hu <justin.hu@alumni.ubc.ca>"]
edition = "2024"
description = "A simultaneous turn resolution 4X inspired by High Frontier and Triplanetary - server binary."
homepage = "https://github.com/JustinHuPrime/SolarDawn#readme"
repository = "https://github.com/JustinHuPrime/SolarDawn"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
futures-util = "0.3.31"
num-traits = "0.2.19"
rand = { workspace = true, features = ["serde"] }
rand_distr = "0.5.1"
rand_pcg = { version = "0.9.0", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_cbor = "0.11.2"
solar_dawn_common = { path = "../solar_dawn_common", features = ["server"] }
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
