[package]
name = "solar_dawn_server"
version = "0.5.0"
authors = ["Justin Hu <justin.hu@alumni.ubc.ca>"]
edition = "2024"
description = "A simultaneous turn resolution 4X inspired by High Frontier and Triplanetary - server binary."
homepage = "https://github.com/JustinHuPrime/SolarDawn#readme"
repository = "https://github.com/JustinHuPrime/SolarDawn"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["ws"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
clap = { version = "4.5.54", features = ["derive"] }
futures-util = "0.3.31"
num-traits = "0.2.19"
rand = { workspace = true, features = ["serde"] }
rand_distr = "0.5.1"
rand_pcg = { version = "0.9.0", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_cbor = { workspace = true }
solar_dawn_common = { path = "../solar_dawn_common", features = ["server"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.20"
